Renamespce from P to p

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,6 @@
   },
   "autoload": {
     "psr-4": {"Predicate\\": ["src/Predicate", "tests/Predicate"]},
-    "files": ["src\\P\\autoload.php"]
+    "files": ["src\\p\\autoload.php"]
   }
 }
